--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resize L&M Watch Images</title>
+    <title>Resize L&M Images</title>
+    <link
+      rel="icon"
+      href="https://avatars.githubusercontent.com/u/119769481?v=4"
+      type="image/png"
+    />
     <style>
       body {
         font-family: "Segoe UI", sans-serif;
