--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <body>
     <h1>Resize L&M Watch Images</h1>
     <div class="upload-controls">
-      <input type="file" multiple accept="image/*" id="fileInput" />
+      <input type="file" multiple accept="image/*,.tif,.tiff" id="fileInput" />
       <p class="notice">Hoặc Ctrl+V để dán ảnh từ clipboard.</p>
       <button onclick="downloadAll()">Tải về tất cả ảnh</button>
     </div>
@@ -181,6 +181,9 @@
       Đang xử lý, vui lòng chờ...
     </div>
 
+    <!-- UTIF để đọc TIFF -->
+    <script src="./UTIF.js"></script>
+    <!-- thư viện ZIP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script>
       const fileInput = document.getElementById("fileInput");
@@ -191,7 +194,7 @@
       let processedImages = [];
 
       fileInput.addEventListener("change", () => {
-        Array.from(fileInput.files).forEach(processImageFile);
+        Array.from(fileInput.files).forEach((f) => processImageFile(f));
       });
 
       document.addEventListener("paste", (event) => {
@@ -204,93 +207,173 @@
         }
       });
 
-      function processImageFile(file) {
-        const reader = new FileReader();
-        reader.onload = (event) => {
-          const img = new Image();
-          img.onload = () => {
-            const tempCanvas = document.createElement("canvas");
-            const tempCtx = tempCanvas.getContext("2d");
-            tempCanvas.width = img.width;
-            tempCanvas.height = img.height;
-            tempCtx.drawImage(img, 0, 0);
+      // helper: đọc TIFF (File) -> DataURL PNG (dùng UTIF)
+      async function tiffToDataURL(file) {
+        try {
+          const buf = new Uint8Array(await file.arrayBuffer());
+          const ifds = UTIF.decode(buf);
+          if (!ifds || ifds.length === 0)
+            throw new Error("Không tìm thấy IFD trong TIFF");
+          // decode trang đầu
+          UTIF.decodeImage(buf, ifds[0]);
+          const rgba = UTIF.toRGBA8(ifds[0]);
+          const w = ifds[0].width;
+          const h = ifds[0].height;
+          const c = document.createElement("canvas");
+          c.width = w;
+          c.height = h;
+          const ctx = c.getContext("2d");
+          const imgData = ctx.createImageData(w, h);
+          imgData.data.set(rgba);
+          ctx.putImageData(imgData, 0, 0);
+          return c.toDataURL("image/png");
+        } catch (err) {
+          throw new Error("Lỗi khi đọc TIFF: " + err.message);
+        }
+      }
 
-            let imageData = tempCtx.getImageData(0, 0, img.width, img.height);
-            let data = imageData.data;
-            const threshold = 240;
-            for (let i = 0; i < data.length; i += 4) {
-              let r = data[i],
-                g = data[i + 1],
-                b = data[i + 2];
-              if (r > threshold && g > threshold && b > threshold)
-                data[i + 3] = 0;
-            }
-            tempCtx.putImageData(imageData, 0, 0);
+      // helper: đọc File -> dataURL (non-TIFF)
+      function fileToDataURL(file) {
+        return new Promise((resolve, reject) => {
+          const fr = new FileReader();
+          fr.onload = () => resolve(fr.result);
+          fr.onerror = (e) => reject(e);
+          fr.readAsDataURL(file);
+        });
+      }
 
-            let minY = img.height,
-              maxY = 0;
-            for (let y = 0; y < img.height; y++) {
-              for (let x = 0; x < img.width; x++) {
-                let index = (y * img.width + x) * 4 + 3;
-                if (data[index] > 10) {
-                  if (y < minY) minY = y;
-                  if (y > maxY) maxY = y;
-                }
+      async function processImageFile(file) {
+        loadingOverlay.style.display = "flex";
+        try {
+          const lower = (file.name || "").toLowerCase();
+          let dataUrl;
+          if (lower.endsWith(".tif") || lower.endsWith(".tiff")) {
+            // chuyển TIFF sang PNG DataURL trước
+            dataUrl = await tiffToDataURL(file);
+          } else {
+            dataUrl = await fileToDataURL(file);
+          }
+
+          // sau khi có dataUrl, xử lý như cũ
+          const img = await loadImage(dataUrl);
+
+          // canvas tạm để quét alpha / brightness và xác định vùng nội dung
+          const tempCanvas = document.createElement("canvas");
+          const tempCtx = tempCanvas.getContext("2d");
+          tempCanvas.width = img.width;
+          tempCanvas.height = img.height;
+          tempCtx.drawImage(img, 0, 0);
+
+          let imageData = tempCtx.getImageData(0, 0, img.width, img.height);
+          let data = imageData.data;
+          const threshold = 240; // ngưỡng sáng để coi là nền
+          for (let i = 0; i < data.length; i += 4) {
+            let r = data[i],
+              g = data[i + 1],
+              b = data[i + 2];
+            if (r > threshold && g > threshold && b > threshold)
+              data[i + 3] = 0;
+          }
+          tempCtx.putImageData(imageData, 0, 0);
+
+          let minY = img.height,
+            maxY = 0;
+          for (let y = 0; y < img.height; y++) {
+            for (let x = 0; x < img.width; x++) {
+              let index = (y * img.width + x) * 4 + 3;
+              if (data[index] > 10) {
+                if (y < minY) minY = y;
+                if (y > maxY) maxY = y;
               }
             }
-            const realHeight = maxY - minY || 1;
-            const targetHeight = 1500;
-            const scaleFactor = targetHeight / realHeight;
-            const newWidth = Math.round(img.width * scaleFactor);
-            const newHeight = Math.round(img.height * scaleFactor);
+          }
+          if (maxY <= minY) {
+            minY = 0;
+            maxY = img.height;
+          }
+          const realHeight = maxY - minY || 1;
+          const targetHeight = 1500;
+          const scaleFactor = targetHeight / realHeight;
+          const newWidth = Math.round(img.width * scaleFactor);
+          const newHeight = Math.round(img.height * scaleFactor);
 
-            const canvas = document.createElement("canvas");
-            const ctx = canvas.getContext("2d");
-            canvas.width = 2000;
-            canvas.height = 2000;
-            ctx.fillStyle = "#fff";
-            ctx.fillRect(0, 0, 2000, 2000);
+          const canvas = document.createElement("canvas");
+          const ctx = canvas.getContext("2d");
+          canvas.width = 2000;
+          canvas.height = 2000;
+          ctx.fillStyle = "#fff";
+          ctx.fillRect(0, 0, 2000, 2000);
 
-            const x = (2000 - newWidth) / 2;
-            const y = (2000 - targetHeight) / 2 - minY * scaleFactor;
-            ctx.drawImage(tempCanvas, x, y, newWidth, newHeight);
+          const x = (2000 - newWidth) / 2;
+          const y = (2000 - targetHeight) / 2 - minY * scaleFactor;
+          ctx.imageSmoothingEnabled = true;
+          ctx.imageSmoothingQuality = "high";
+          ctx.drawImage(tempCanvas, x, y, newWidth, newHeight);
 
-            canvas.toBlob((blob) => {
-              const index = processedImages.length + 1;
-              const finalName = `image${index}.png`;
-              processedImages.push({ name: finalName, blob });
+          canvas.toBlob((blob) => {
+            const index = processedImages.length + 1;
+            // giữ tên gốc nhưng đổi đuôi sang png
+            const baseName = (file.name || `image${index}`).replace(
+              /\.[^.]+$/,
+              ""
+            );
+            const finalName = `${baseName}.png`;
+            processedImages.push({ name: finalName, blob });
 
-              const wrapper = document.createElement("div");
-              wrapper.className = "image-wrapper";
-              wrapper.innerHTML = `
+            const wrapper = document.createElement("div");
+            wrapper.className = "image-wrapper";
+            wrapper.innerHTML = `
               <button class="remove-btn" title="Xoá ảnh">&times;</button>
               <img src="${URL.createObjectURL(blob)}" alt="Processed"/>
               <button class="download-single">Tải ảnh</button>
             `;
-              wrapper.querySelector(".remove-btn").onclick = (e) => {
-                e.stopPropagation();
-                processedImages = processedImages.filter(
-                  (i) => i.blob !== blob
-                );
-                wrapper.remove();
-              };
-              wrapper.querySelector(".download-single").onclick = (e) => {
-                e.stopPropagation();
-                const a = document.createElement("a");
-                a.href = URL.createObjectURL(blob);
-                a.download = finalName;
-                a.click();
-              };
-              wrapper.onclick = () => {
-                zoomedImage.src = URL.createObjectURL(blob);
-                zoomModal.style.display = "flex";
-              };
-              preview.appendChild(wrapper);
-            }, "image/png");
-          };
-          img.src = event.target.result;
-        };
-        reader.readAsDataURL(file);
+            wrapper.querySelector(".remove-btn").onclick = (e) => {
+              e.stopPropagation();
+              processedImages = processedImages.filter((i) => i.blob !== blob);
+              wrapper.remove();
+            };
+            wrapper.querySelector(".download-single").onclick = (e) => {
+              e.stopPropagation();
+              const a = document.createElement("a");
+              a.href = URL.createObjectURL(blob);
+              a.download = finalName;
+              a.click();
+            };
+            wrapper.onclick = () => {
+              zoomedImage.src = URL.createObjectURL(blob);
+              zoomModal.style.display = "flex";
+            };
+            preview.appendChild(wrapper);
+            loadingOverlay.style.display = "none";
+          }, "image/png");
+        } catch (err) {
+          loadingOverlay.style.display = "none";
+          alert("Lỗi xử lý ảnh: " + err.message);
+          console.error(err);
+        }
+      }
+
+      function loadImage(url) {
+        return new Promise((res, rej) => {
+          const img = new Image();
+          img.onload = () => res(img);
+          img.onerror = rej;
+          img.src = url;
+        });
+      }
+
+      function readAsDataURL(file) {
+        return new Promise((res, rej) => {
+          const fr = new FileReader();
+          fr.onload = () => res(fr.result);
+          fr.onerror = rej;
+          fr.readAsDataURL(file);
+        });
+      }
+
+      // giữ helper backward-compatible
+      function fileToDataURL(file) {
+        return readAsDataURL(file);
       }
 
       function downloadAll() {
