--- a/index.html
+++ b/index.html
@@ -99,13 +99,8 @@
         color: #fff;
         font-size: 20px;
         line-height: 30px;
-        text-align: center;
         cursor: pointer;
-        transition: background-color 0.25s;
-        padding: 0px !important;
-      }
-      .remove-btn:hover {
-        background-color: #ff2222;
+        padding: 0;
       }
       .download-single {
         position: absolute;
@@ -119,10 +114,6 @@
         padding: 5px 12px;
         font-size: 13px;
         cursor: pointer;
-        transition: background 0.25s;
-      }
-      .download-single:hover {
-        background: #555;
       }
       .modal {
         display: none;
@@ -169,7 +160,7 @@
     <div class="upload-controls">
       <input type="file" multiple accept="image/*,.tif,.tiff" id="fileInput" />
       <p class="notice">Hoặc Ctrl+V để dán ảnh từ clipboard.</p>
-      <button onclick="downloadAll()">Tải về tất cả ảnh</button>
+      <button id="downloadBtn">Tải về tất cả ảnh</button>
     </div>
     <div class="grid" id="preview"></div>
     <div class="footer-note">Designed by GiaQuyenVan</div>
@@ -177,87 +168,113 @@
     <div class="modal" id="zoomModal" onclick="this.style.display='none'">
       <img id="zoomedImage" src="" alt="Zoomed" />
     </div>
+
     <div class="overlay-loading" id="loadingOverlay">
       Đang xử lý, vui lòng chờ...
     </div>
 
     <!-- UTIF để đọc TIFF -->
     <script src="./UTIF.js"></script>
-    <!-- thư viện ZIP -->
+    <!-- JSZip -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+
     <script>
       const fileInput = document.getElementById("fileInput");
       const preview = document.getElementById("preview");
       const zoomModal = document.getElementById("zoomModal");
       const zoomedImage = document.getElementById("zoomedImage");
       const loadingOverlay = document.getElementById("loadingOverlay");
+      const downloadBtn = document.getElementById("downloadBtn");
+
       let processedImages = [];
+      let globalNameCounter = 0; // đảm bảo tên file duy nhất
 
       fileInput.addEventListener("change", () => {
         Array.from(fileInput.files).forEach((f) => processImageFile(f));
       });
 
       document.addEventListener("paste", (event) => {
-        const items = event.clipboardData.items;
+        const items = event.clipboardData && event.clipboardData.items;
+        if (!items) return;
         for (let item of items) {
-          if (item.type.indexOf("image") !== -1) {
+          if (item.type && item.type.indexOf("image") !== -1) {
             const file = item.getAsFile();
-            processImageFile(file);
+            if (file) processImageFile(file);
           }
         }
       });
 
-      // helper: đọc TIFF (File) -> DataURL PNG (dùng UTIF)
-      async function tiffToDataURL(file) {
-        try {
-          const buf = new Uint8Array(await file.arrayBuffer());
-          const ifds = UTIF.decode(buf);
-          if (!ifds || ifds.length === 0)
-            throw new Error("Không tìm thấy IFD trong TIFF");
-          // decode trang đầu
-          UTIF.decodeImage(buf, ifds[0]);
-          const rgba = UTIF.toRGBA8(ifds[0]);
-          const w = ifds[0].width;
-          const h = ifds[0].height;
-          const c = document.createElement("canvas");
-          c.width = w;
-          c.height = h;
-          const ctx = c.getContext("2d");
-          const imgData = ctx.createImageData(w, h);
-          imgData.data.set(rgba);
-          ctx.putImageData(imgData, 0, 0);
-          return c.toDataURL("image/png");
-        } catch (err) {
-          throw new Error("Lỗi khi đọc TIFF: " + err.message);
-        }
-      }
-
-      // helper: đọc File -> dataURL (non-TIFF)
       function fileToDataURL(file) {
         return new Promise((resolve, reject) => {
           const fr = new FileReader();
           fr.onload = () => resolve(fr.result);
-          fr.onerror = (e) => reject(e);
+          fr.onerror = reject;
           fr.readAsDataURL(file);
         });
       }
 
+      async function tiffToDataURL(file) {
+        const buf = new Uint8Array(await file.arrayBuffer());
+        const ifds = UTIF.decode(buf);
+        if (!ifds || ifds.length === 0)
+          throw new Error("Không tìm thấy IFD trong TIFF");
+        UTIF.decodeImage(buf, ifds[0]);
+        const rgba = UTIF.toRGBA8(ifds[0]);
+        const w = ifds[0].width;
+        const h = ifds[0].height;
+        const c = document.createElement("canvas");
+        c.width = w;
+        c.height = h;
+        const ctx = c.getContext("2d");
+        const imgData = ctx.createImageData(w, h);
+        imgData.data.set(rgba);
+        ctx.putImageData(imgData, 0, 0);
+        return c.toDataURL("image/png");
+      }
+
+      function loadImage(url) {
+        return new Promise((resolve, reject) => {
+          const img = new Image();
+          img.onload = () => resolve(img);
+          img.onerror = reject;
+          img.src = url;
+        });
+      }
+
+      function canvasToBlob(canvas) {
+        return new Promise((resolve) => {
+          canvas.toBlob((blob) => resolve(blob), "image/png");
+        });
+      }
+
+      // tạo tên file luôn duy nhất bằng counter toàn cục
+      function makeUniqueFinalName(baseNameNoExt) {
+        globalNameCounter += 1;
+        const safeBase =
+          baseNameNoExt.replace(/[^a-zA-Z0-9_\- ]/g, "_").trim() || "image";
+        return `${safeBase}_${globalNameCounter}.png`;
+      }
+
       async function processImageFile(file) {
+        // hiển thị overlay (không block việc gọi nhiều file cùng lúc)
         loadingOverlay.style.display = "flex";
+
         try {
-          const lower = (file.name || "").toLowerCase();
+          // đảm bảo có tên gốc an toàn
+          const rawName = file && file.name ? file.name : `clipboard_image`;
+          const nameBase = rawName.replace(/\.[^.]+$/, "") || `image`;
+
           let dataUrl;
+          const lower = rawName.toLowerCase();
           if (lower.endsWith(".tif") || lower.endsWith(".tiff")) {
-            // chuyển TIFF sang PNG DataURL trước
             dataUrl = await tiffToDataURL(file);
           } else {
             dataUrl = await fileToDataURL(file);
           }
 
-          // sau khi có dataUrl, xử lý như cũ
           const img = await loadImage(dataUrl);
 
-          // canvas tạm để quét alpha / brightness và xác định vùng nội dung
+          // xử lý alpha / tìm vùng content
           const tempCanvas = document.createElement("canvas");
           const tempCtx = tempCanvas.getContext("2d");
           tempCanvas.width = img.width;
@@ -266,13 +283,15 @@
 
           let imageData = tempCtx.getImageData(0, 0, img.width, img.height);
           let data = imageData.data;
-          const threshold = 240; // ngưỡng sáng để coi là nền
+          const threshold = 240;
           for (let i = 0; i < data.length; i += 4) {
-            let r = data[i],
-              g = data[i + 1],
-              b = data[i + 2];
-            if (r > threshold && g > threshold && b > threshold)
+            if (
+              data[i] > threshold &&
+              data[i + 1] > threshold &&
+              data[i + 2] > threshold
+            ) {
               data[i + 3] = 0;
+            }
           }
           tempCtx.putImageData(imageData, 0, 0);
 
@@ -280,8 +299,7 @@
             maxY = 0;
           for (let y = 0; y < img.height; y++) {
             for (let x = 0; x < img.width; x++) {
-              let index = (y * img.width + x) * 4 + 3;
-              if (data[index] > 10) {
+              if (data[(y * img.width + x) * 4 + 3] > 10) {
                 if (y < minY) minY = y;
                 if (y > maxY) maxY = y;
               }
@@ -291,7 +309,8 @@
             minY = 0;
             maxY = img.height;
           }
-          const realHeight = maxY - minY || 1;
+
+          const realHeight = Math.max(1, maxY - minY);
           const targetHeight = 1500;
           const scaleFactor = targetHeight / realHeight;
           const newWidth = Math.round(img.width * scaleFactor);
@@ -310,91 +329,92 @@
           ctx.imageSmoothingQuality = "high";
           ctx.drawImage(tempCanvas, x, y, newWidth, newHeight);
 
-          canvas.toBlob((blob) => {
-            const index = processedImages.length + 1;
-            // giữ tên gốc nhưng đổi đuôi sang png
-            const baseName = (file.name || `image${index}`).replace(
-              /\.[^.]+$/,
-              ""
-            );
-            const finalName = `${baseName}.png`;
-            processedImages.push({ name: finalName, blob });
+          const blob = await canvasToBlob(canvas);
 
-            const wrapper = document.createElement("div");
-            wrapper.className = "image-wrapper";
-            wrapper.innerHTML = `
-              <button class="remove-btn" title="Xoá ảnh">&times;</button>
-              <img src="${URL.createObjectURL(blob)}" alt="Processed"/>
-              <button class="download-single">Tải ảnh</button>
-            `;
-            wrapper.querySelector(".remove-btn").onclick = (e) => {
-              e.stopPropagation();
-              processedImages = processedImages.filter((i) => i.blob !== blob);
-              wrapper.remove();
-            };
-            wrapper.querySelector(".download-single").onclick = (e) => {
-              e.stopPropagation();
-              const a = document.createElement("a");
-              a.href = URL.createObjectURL(blob);
-              a.download = finalName;
-              a.click();
-            };
-            wrapper.onclick = () => {
-              zoomedImage.src = URL.createObjectURL(blob);
-              zoomModal.style.display = "flex";
-            };
-            preview.appendChild(wrapper);
-            loadingOverlay.style.display = "none";
-          }, "image/png");
+          // tạo tên file duy nhất
+          const finalName = makeUniqueFinalName(nameBase);
+
+          // push vào mảng
+          processedImages.push({ name: finalName, blob });
+
+          // tạo preview
+          const wrapper = document.createElement("div");
+          wrapper.className = "image-wrapper";
+          const objectUrl = URL.createObjectURL(blob);
+          wrapper.innerHTML = `
+            <button class="remove-btn" title="Xoá ảnh">&times;</button>
+            <img src="${objectUrl}" alt="Processed" />
+            <button class="download-single">Tải ảnh</button>
+          `;
+          // hành vi nút xóa
+          wrapper.querySelector(".remove-btn").onclick = (e) => {
+            e.stopPropagation();
+            // xoá entry dựa trên tên file (duy nhất)
+            processedImages = processedImages.filter(
+              (i) => i.name !== finalName
+            );
+            wrapper.remove();
+            URL.revokeObjectURL(objectUrl);
+          };
+          // tải từng ảnh
+          wrapper.querySelector(".download-single").onclick = (e) => {
+            e.stopPropagation();
+            const a = document.createElement("a");
+            a.href = objectUrl;
+            a.download = finalName;
+            a.click();
+          };
+          // zoom khi click wrapper
+          wrapper.onclick = () => {
+            zoomedImage.src = objectUrl;
+            zoomModal.style.display = "flex";
+          };
+
+          preview.appendChild(wrapper);
         } catch (err) {
+          console.error("Lỗi xử lý ảnh:", err);
+          alert("Lỗi xử lý ảnh: " + (err && err.message ? err.message : err));
+        } finally {
+          // nếu vẫn còn ảnh đang xử lý khác thì overlay có thể giữ, nhưng để đơn giản ta tắt
           loadingOverlay.style.display = "none";
-          alert("Lỗi xử lý ảnh: " + err.message);
-          console.error(err);
         }
       }
 
-      function loadImage(url) {
-        return new Promise((res, rej) => {
-          const img = new Image();
-          img.onload = () => res(img);
-          img.onerror = rej;
-          img.src = url;
-        });
-      }
-
-      function readAsDataURL(file) {
-        return new Promise((res, rej) => {
-          const fr = new FileReader();
-          fr.onload = () => res(fr.result);
-          fr.onerror = rej;
-          fr.readAsDataURL(file);
-        });
-      }
-
-      // giữ helper backward-compatible
-      function fileToDataURL(file) {
-        return readAsDataURL(file);
-      }
-
-      function downloadAll() {
+      async function downloadAll() {
         if (processedImages.length === 0) {
           alert("Chưa có ảnh nào để tải.");
           return;
         }
+
+        // disable button tạm để tránh double-click
+        downloadBtn.disabled = true;
         loadingOverlay.style.display = "flex";
-        const zip = new JSZip();
-        const folder = zip.folder("Processed_Watch_Images");
-        processedImages.forEach(({ name, blob }) => {
-          folder.file(name, blob);
-        });
-        zip.generateAsync({ type: "blob" }).then((content) => {
+
+        try {
+          const zip = new JSZip();
+          const folder = zip.folder("Processed_Watch_Images");
+          // thêm từng blob với tên đã được đảm bảo duy nhất
+          processedImages.forEach(({ name, blob }) => {
+            folder.file(name, blob);
+          });
+
+          const content = await zip.generateAsync({ type: "blob" });
           const a = document.createElement("a");
           a.href = URL.createObjectURL(content);
           a.download = "Processed_Watch_Images.zip";
           a.click();
+          // revoke after short delay
+          setTimeout(() => URL.revokeObjectURL(a.href), 10000);
+        } catch (err) {
+          console.error("Lỗi khi tạo ZIP:", err);
+          alert("Lỗi khi tạo ZIP: " + (err && err.message ? err.message : err));
+        } finally {
           loadingOverlay.style.display = "none";
-        });
+          downloadBtn.disabled = false;
+        }
       }
+
+      downloadBtn.addEventListener("click", downloadAll);
     </script>
   </body>
 </html>
